Added depending jobs

--- a/.github/workflows/framework-test-2.yml
+++ b/.github/workflows/framework-test-2.yml
@@ -1,7 +1,59 @@
 name: Testerra Framework Test
 on: push
 jobs:
+  generate-pre-reports:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          cache: 'gradle'
+          java-version: '11'
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Build Testerra
+        run: ./gradlew clean compileJava compileTestJava buildReport
+
+
+      - name: Prepare Status Tests
+        run: |
+          cd integration-tests
+          sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -DwithJacoco
+          sudo chmod -R a+r test-report/*
+      - name: Publish artifacts - Prepare Status Tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: PreTest Status
+          path: integration-tests/test-report
+
+      - name: Prepare Report Tests 1
+        run: |
+          cd report-ng-tests
+          sudo ../gradlew test -P pretest=true
+          sudo chmod -R a+r src/test/resources/reports/report-generated-status/*
+      - name: Publish artifacts - PreTest ReportNG 1
+        uses: actions/upload-artifact@v4
+        with:
+          name: PreTest ReportNG 1
+          path: report-ng-tests/src/test/resources/reports/report-generated-status
+
+      - name: Prepare Report Tests 2
+        run: |
+          cd report-ng-tests
+          sudo ../gradlew test -P pretestExtended=true
+          sudo chmod -R a+r src/test/resources/reports/report-extended-status/*
+      - name: Publish artifacts - PreTest ReportNG 2
+        uses: actions/upload-artifact@v4
+        with:
+          name: PreTest ReportNG 2
+          path: report-ng-tests/src/test/resources/reports/report-extended-status
+
+
   test-reportng:
+    needs: generate-pre-reports
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -47,6 +99,7 @@ jobs:
 
 
   test-testerra:
+    needs: generate-pre-reports
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -62,35 +115,18 @@ jobs:
       - name: Build Testerra
         run: ./gradlew clean compileJava compileTestJava buildReport
 
-      - name: Prepare Status Tests
-        run: |
-          cd integration-tests
-          sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -DwithJacoco
-          sudo chmod -R a+r test-report/*
-      - name: Publish artifacts - Prepare Status Tests
-        uses: actions/upload-artifact@v4
+
+      - uses: actions/download-artifact@master
         with:
           name: PreTest Status
           path: integration-tests/test-report
 
-      - name: Prepare Report Tests 1
-        run: |
-          cd report-ng-tests
-          sudo ../gradlew test -P pretest=true
-          sudo chmod -R a+r src/test/resources/reports/report-generated-status/*
-      - name: Publish artifacts - PreTest ReportNG 1
-        uses: actions/upload-artifact@v4
+      - uses: actions/download-artifact@master
         with:
           name: PreTest ReportNG 1
           path: report-ng-tests/src/test/resources/reports/report-generated-status
 
-      - name: Prepare Report Tests 2
-        run: |
-          cd report-ng-tests
-          sudo ../gradlew test -P pretestExtended=true
-          sudo chmod -R a+r src/test/resources/reports/report-extended-status/*
-      - name: Publish artifacts - PreTest ReportNG 2
-        uses: actions/upload-artifact@v4
+      - uses: actions/download-artifact@master
         with:
           name: PreTest ReportNG 2
           path: report-ng-tests/src/test/resources/reports/report-extended-status
