--- a/.github/workflows/framework-test-3.yml
+++ b/.github/workflows/framework-test-3.yml
@@ -1,7 +1,7 @@
 name: Testerra Framework Test
-on: push
+on: pull_request
 jobs:
-  generate-pre-reports:
+  generate-pre-test-reports:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
