--- a/.github/workflows/framework-test-2.yml
+++ b/.github/workflows/framework-test-2.yml
@@ -2,6 +2,52 @@ name: testerra-framework-test
 on: push
 jobs:
 
+  test-reportng:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          cache: 'gradle'
+          java-version: '11'
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Build Testerra
+        run: ./gradlew clean compileJava compileTestJava buildReport
+
+      - name: Prepare Status Tests
+        run: |
+          cd integration-tests
+          sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -DwithJacoco -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
+          sudo chmod -R a+r test-report/*
+
+      - name: Prepare Report Tests 1
+        run: |
+          cd report-ng-tests
+          sudo ../gradlew test -P pretest=true -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
+          sudo chmod -R a+r src/test/resources/reports/report-generated-status/*
+
+      - name: Prepare Report Tests 2
+        run: |
+          cd report-ng-tests
+          sudo ../gradlew test -P pretestExtended=true -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
+          sudo chmod -R a+r src/test/resources/reports/report-extended-status/*
+
+
+      - name: Run Tests - Testerra ReportNG tests
+        run: |
+          cd report-ng-tests
+          sudo ../gradlew clean test -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
+          sudo chmod -R a+r test-report/*
+      - name: Publish artifacts - Testerra ReportNG tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: Testerra ReportNG tests
+          path: report-ng-tests/test-report
+
 
   test-testerra:
     runs-on: ubuntu-latest
@@ -22,7 +68,7 @@ jobs:
       - name: Prepare Status Tests
         run: |
           cd integration-tests
-          sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -DwithJacoco
+          sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -DwithJacoco -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
           sudo chmod -R a+r test-report/*
       - name: Publish artifacts - Prepare Status Tests
         uses: actions/upload-artifact@v4
@@ -30,21 +76,11 @@ jobs:
           name: PreTest Status
           path: integration-tests/test-report
 
-      - name: Publish PreTest Status report
-        uses: PavanMudigonda/html-reporter-github-pages@v1.3
-        with:
-          test_results: integration-tests/test-report
-          keep_reports: 10
-          gh_pages: gh_pages
-          subfolder: reports
-          workflow_name: ${{ github.workflow }}
-          env: PreTest_Status
-
 
       - name: Prepare Report Tests 1
         run: |
           cd report-ng-tests
-          sudo ../gradlew test -P pretest=true
+          sudo ../gradlew test -P pretest=true -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
           sudo chmod -R a+r src/test/resources/reports/report-generated-status/*
       - name: Publish artifacts - PreTest ReportNG 1
         uses: actions/upload-artifact@v4
@@ -52,21 +88,11 @@ jobs:
           name: PreTest ReportNG 1
           path: report-ng-tests/src/test/resources/reports/report-generated-status
 
-      - name: Publish PreTest ReportNG 1 report
-        uses: PavanMudigonda/html-reporter-github-pages@v1.3
-        with:
-          test_results: report-ng-tests/src/test/resources/reports/report-generated-status
-          keep_reports: 10
-          gh_pages: gh_pages
-          subfolder: reports
-          workflow_name: ${{ github.workflow }}
-          env: PreTest_ReportNG_1
-
 
       - name: Prepare Report Tests 2
         run: |
           cd report-ng-tests
-          sudo ../gradlew test -P pretestExtended=true
+          sudo ../gradlew test -P pretestExtended=true -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
           sudo chmod -R a+r src/test/resources/reports/report-extended-status/*
       - name: Publish artifacts - PreTest ReportNG 2
         uses: actions/upload-artifact@v4
@@ -74,21 +100,11 @@ jobs:
           name: PreTest ReportNG 2
           path: report-ng-tests/src/test/resources/reports/report-extended-status
 
-      - name: Publish PreTest ReportNG 2 report
-        uses: PavanMudigonda/html-reporter-github-pages@v1.3
-        with:
-          test_results: report-ng-tests/src/test/resources/reports/report-extended-status
-          keep_reports: 10
-          gh_pages: gh_pages
-          subfolder: reports
-          workflow_name: ${{ github.workflow }}
-          env: PreTest_ReportNG_2
-
 
       - name: Run Tests - Testerra Integration tests
         run: |
           cd integration-tests
-          sudo ../gradlew clean test
+          sudo ../gradlew clean test -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
           sudo chmod -R a+r test-report/*
       - name: Publish artifacts - Testerra Integration tests
         uses: actions/upload-artifact@v4
@@ -96,21 +112,11 @@ jobs:
           name: Testerra Integration tests
           path: integration-tests/test-report
 
-      - name: Publish Testerra Integration tests report
-        uses: PavanMudigonda/html-reporter-github-pages@v1.3
-        with:
-          test_results: integration-tests/test-report
-          keep_reports: 10
-          gh_pages: gh_pages
-          subfolder: reports
-          workflow_name: ${{ github.workflow }}
-          env: Testerra_Integration_tests
-
 
       - name: Run Tests - Testerra MailConnector
         run: |
           cd mail-connector
-          sudo ../gradlew clean test
+          sudo ../gradlew clean test -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
           sudo chmod -R a+r test-report/*
       - name: Publish artifacts - Testerra MailConnector
         uses: actions/upload-artifact@v4
@@ -118,34 +124,14 @@ jobs:
           name: Testerra MailConnector
           path: mail-connector/test-report
 
-      - name: Publish Testerra MailConnector report
-        uses: PavanMudigonda/html-reporter-github-pages@v1.3
-        with:
-          test_results: mail-connector/test-report
-          keep_reports: 10
-          gh_pages: gh_pages
-          subfolder: reports
-          workflow_name: ${{ github.workflow }}
-          env: Testerra_MailConnector
-
 
       - name: Run Tests - Testerra BUP tests
         run: |
           cd bup
-          sudo ../gradlew clean test
+          sudo ../gradlew clean test -Dtt.browser=chromeHeadless -Dtt.selenium.server.host= -Dtt.selenium.server.url=
           sudo chmod -R a+r test-report/*
       - name: Publish artifacts - Testerra BUP tests
         uses: actions/upload-artifact@v4
         with:
           name: Testerra BUP tests
           path: bup/test-report
-
-      - name: Publish Testerra BUP tests report
-        uses: PavanMudigonda/html-reporter-github-pages@v1.3
-        with:
-          test_results: bup/test-report
-          keep_reports: 10
-          gh_pages: gh_pages
-          subfolder: reports
-          workflow_name: ${{ github.workflow }}
-          env: Testerra_BUP_tests
