--- a/.github/workflows/framework-test-backup.yml
+++ b/.github/workflows/framework-test-backup.yml
@@ -2,7 +2,7 @@ name: Testerra Framework Test
 on: workflow_dispatch
 jobs:
 
-  generate-pre-test-reports:
+  test-reportng:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -17,74 +17,24 @@ jobs:
         run: chmod +x ./gradlew
       - name: Build Testerra
         run: ./gradlew clean compileJava compileTestJava buildReport
-
 
       - name: Prepare Status Tests
         run: |
           cd integration-tests
           sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -DwithJacoco
           sudo chmod -R a+r test-report/*
-      - name: Publish artifacts - Prepare Status Tests
-        uses: actions/upload-artifact@v4
-        with:
-          name: PreTest Status
-          path: integration-tests/test-report
 
       - name: Prepare Report Tests 1
         run: |
           cd report-ng-tests
           sudo ../gradlew test -P pretest=true
           sudo chmod -R a+r src/test/resources/reports/report-generated-status/*
-      - name: Publish artifacts - PreTest ReportNG 1
-        uses: actions/upload-artifact@v4
-        with:
-          name: PreTest ReportNG 1
-          path: report-ng-tests/src/test/resources/reports/report-generated-status
 
       - name: Prepare Report Tests 2
         run: |
           cd report-ng-tests
           sudo ../gradlew test -P pretestExtended=true
           sudo chmod -R a+r src/test/resources/reports/report-extended-status/*
-      - name: Publish artifacts - PreTest ReportNG 2
-        uses: actions/upload-artifact@v4
-        with:
-          name: PreTest ReportNG 2
-          path: report-ng-tests/src/test/resources/reports/report-extended-status
-
-
-  test-reportng:
-    needs: generate-pre-reports
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'zulu'
-          cache: 'gradle'
-          java-version: '11'
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-      - name: Build Testerra
-        run: ./gradlew clean compileJava compileTestJava buildReport
-
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: PreTest Status
-          path: integration-tests/test-report
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: PreTest ReportNG 1
-          path: report-ng-tests/src/test/resources/reports/report-generated-status
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: PreTest ReportNG 2
-          path: report-ng-tests/src/test/resources/reports/report-extended-status
 
 
       - name: Run Tests - Testerra ReportNG tests
@@ -98,9 +48,7 @@ jobs:
           name: Testerra ReportNG tests
           path: report-ng-tests/test-report
 
-
   test-testerra:
-    needs: generate-pre-reports
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -116,21 +64,70 @@ jobs:
       - name: Build Testerra
         run: ./gradlew clean compileJava compileTestJava buildReport
 
-
-      - uses: actions/download-artifact@v4
+      - name: Prepare Status Tests
+        run: |
+          cd integration-tests
+          sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -DwithJacoco
+          sudo chmod -R a+r test-report/*
+      - name: Publish artifacts - Prepare Status Tests
+        uses: actions/upload-artifact@v4
         with:
           name: PreTest Status
           path: integration-tests/test-report
 
-      - uses: actions/download-artifact@v4
+      - name: Publish PreTest Status report
+        uses: PavanMudigonda/html-reporter-github-pages@v1.3
+        with:
+          test_results: integration-tests/test-report
+          keep_reports: 10
+          gh_pages: gh_pages
+          subfolder: reports
+          workflow_name: ${{ github.workflow }}
+          env: PreTest_Status
+
+
+      - name: Prepare Report Tests 1
+        run: |
+          cd report-ng-tests
+          sudo ../gradlew test -P pretest=true
+          sudo chmod -R a+r src/test/resources/reports/report-generated-status/*
+      - name: Publish artifacts - PreTest ReportNG 1
+        uses: actions/upload-artifact@v4
         with:
           name: PreTest ReportNG 1
           path: report-ng-tests/src/test/resources/reports/report-generated-status
 
-      - uses: actions/download-artifact@v4
+      - name: Publish PreTest ReportNG 1 report
+        uses: PavanMudigonda/html-reporter-github-pages@v1.3
+        with:
+          test_results: report-ng-tests/src/test/resources/reports/report-generated-status
+          keep_reports: 10
+          gh_pages: gh_pages
+          subfolder: reports
+          workflow_name: ${{ github.workflow }}
+          env: PreTest_ReportNG_1
+
+
+      - name: Prepare Report Tests 2
+        run: |
+          cd report-ng-tests
+          sudo ../gradlew test -P pretestExtended=true
+          sudo chmod -R a+r src/test/resources/reports/report-extended-status/*
+      - name: Publish artifacts - PreTest ReportNG 2
+        uses: actions/upload-artifact@v4
         with:
           name: PreTest ReportNG 2
           path: report-ng-tests/src/test/resources/reports/report-extended-status
+
+      - name: Publish PreTest ReportNG 2 report
+        uses: PavanMudigonda/html-reporter-github-pages@v1.3
+        with:
+          test_results: report-ng-tests/src/test/resources/reports/report-extended-status
+          keep_reports: 10
+          gh_pages: gh_pages
+          subfolder: reports
+          workflow_name: ${{ github.workflow }}
+          env: PreTest_ReportNG_2
 
 
       - name: Run Tests - Testerra Integration tests
@@ -144,6 +141,17 @@ jobs:
           name: Testerra Integration tests
           path: integration-tests/test-report
 
+      - name: Publish Testerra Integration tests report
+        uses: PavanMudigonda/html-reporter-github-pages@v1.3
+        with:
+          test_results: integration-tests/test-report
+          keep_reports: 10
+          gh_pages: gh_pages
+          subfolder: reports
+          workflow_name: ${{ github.workflow }}
+          env: Testerra_Integration_tests
+
+
       - name: Run Tests - Testerra MailConnector
         run: |
           cd mail-connector
@@ -155,6 +163,17 @@ jobs:
           name: Testerra MailConnector
           path: mail-connector/test-report
 
+      - name: Publish Testerra MailConnector report
+        uses: PavanMudigonda/html-reporter-github-pages@v1.3
+        with:
+          test_results: mail-connector/test-report
+          keep_reports: 10
+          gh_pages: gh_pages
+          subfolder: reports
+          workflow_name: ${{ github.workflow }}
+          env: Testerra_MailConnector
+
+
       - name: Run Tests - Testerra BUP tests
         run: |
           cd bup
@@ -165,3 +184,13 @@ jobs:
         with:
           name: Testerra BUP tests
           path: bup/test-report
+
+      - name: Publish Testerra BUP tests report
+        uses: PavanMudigonda/html-reporter-github-pages@v1.3
+        with:
+          test_results: bup/test-report
+          keep_reports: 10
+          gh_pages: gh_pages
+          subfolder: reports
+          workflow_name: ${{ github.workflow }}
+          env: Testerra_BUP_tests
