--- a/.github/workflows/framework-test.yml
+++ b/.github/workflows/framework-test.yml
@@ -1,6 +1,7 @@
 name: Testerra Framework Test
-on: pull_request
+on: workflow_dispatch
 jobs:
+
   test-testerra:
     runs-on: ubuntu-latest
     steps:
